--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
 	compile('org.springframework.boot:spring-boot-starter-data-redis')
 	compile('org.springframework.boot:spring-boot-starter-web')
+//	compile('org.springframework.boot:spring-boot-starter-security')
 	runtime('com.h2database:h2')
 	runtime('mysql:mysql-connector-java')
 	compileOnly(group: 'org.projectlombok', name:'lombok', version: '1.16.16')
